feat: 파워 크롤링

--- a/data/cooler_detail_crawling.ipynb
+++ b/data/cooler_detail_crawling.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9907d90e-0e0d-43fd-8478-2364fb42f2fd",
    "metadata": {
     "tags": []
    },
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "240c0ce9-78f3-4e1d-a55a-2ac7d335533f",
    "metadata": {
     "tags": []
    },
@@ -58,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1358a0d-1a67-4ff1-bf9b-c212131d05db",
    "metadata": {
     "tags": []
    },
@@ -83,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72d050f2-1a3d-4e37-9c42-a6ad37f6eb91",
    "metadata": {
     "tags": []
    },
@@ -93,25 +89,25 @@
      "output_type": "stream",
      "text": [
       "           seq\n",
-      "0     18668606\n",
-      "1     20274764\n",
-      "2     19773293\n",
-      "3     13463144\n",
-      "4     20315144\n",
+      "0     14110475\n",
+      "1     17221538\n",
+      "2     17658305\n",
+      "3     17393768\n",
+      "4     19690001\n",
       "...        ...\n",
-      "1316   7424305\n",
-      "1317   6643450\n",
-      "1318   5406903\n",
-      "1319   3928707\n",
-      "1320   1029593\n",
+      "4855   6060000\n",
+      "4856  20074436\n",
+      "4857  14728952\n",
+      "4858  18746018\n",
+      "4859  17151911\n",
       "\n",
-      "[1321 rows x 1 columns]\n"
+      "[4860 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
     "# seq 파일 읽기\n",
-    "category = 112753  # 그래픽 카드\n",
+    "category = 11236855  # 쿨러\n",
     "\n",
     "seq_file = f'./seq_{category}.csv'\n",
     "seq_df = pd.read_csv(seq_file)\n",
@@ -121,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85fbba3b-478d-4b80-ac25-666d6a48c3ad",
    "metadata": {
     "tags": []
    },
@@ -130,17 +125,23 @@
     "header = ['name', 'price', 'link', 'company', 'product_seq', 'image', 'category',\n",
     "          'cooling_type', 'aircool_form', 'tdp', 'intel_socket', 'amd_socket', 'fan_size',\n",
     "          'fan_count', 'airflow', 'noise', 'width', 'length', 'height', 'radiator',\n",
-    "          'radiator_length', 'radiator_thickness', 'hose_length', 'feature', 'led_color',\n",
+    "          'radiator_length', 'radiator_thickness', 'hose_length', 'feature',\n",
     "          'as_years', 'reg_date', 'bookmark']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d81bd827-2357-4b3c-bfbd-f9cb0016e633",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ctype_mask = {'공랭': 0, '수랭': 1}\n",
+    "aform_mask = {'싱글타워형': 0, '듀얼타워형': 1, '일반형': 2, '슬림형': 3, '서버형':4}\n",
+    "isocket_bitmask = ['LGA1700', 'LGA1200', 'LGA115x', 'LGA4677', 'LGA4189-4/5(소켓P4/P5)', 'LGA2066',\n",
+    "                   'LGA3647', 'LGA2011-V3', 'LGA2011', 'LGA1366', 'LGA775', 'LGA771', '소켓478',\n",
+    "                   '소켓370']\n",
+    "asocket_bitmask = ['AM5', 'AM4' ,'FMx/AMx(AM1/4외)', 'AM1', 'SP5' ,'TR4' ,'sWRX8', 'sTRX4',\n",
+    "                   'SP3', '소켓939', '소켓754', '소켓940', '소켓A', '소켓F']\n",
     "feat_bitmask = ['LED 라이트', 'PWM 지원', 'RGB 컨트롤러', '팬 컨트롤러', '리모콘 지원',\n",
     "                '펌프속도조절', '워터블록/로고 회전', 'LCD', '인디게이터', '데이지체인',\n",
     "                '제로팬(0-dB기술)', '수랭 커스텀', '속도조절스위치', '라디에이터 양면팬 지원',\n",
@@ -150,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "707ab8b6-1c62-4833-880c-a5b4807f80fb",
    "metadata": {
     "tags": []
    },
@@ -165,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "728c4092-e6ca-416e-9cb6-512bee0ce204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c21f1cbd-cfaf-4346-913e-d13d756942af",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1321/1321 (100.00%)\n",
-      "걸린 시간: 8127.49 sec\n"
+      "3/4860 (0.06%) (남은 시간: 30142s)\n",
+      "걸린 시간: 18.62 sec\n"
      ]
     }
    ],
@@ -205,8 +203,14 @@
     "    name = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > h3 > span\")\n",
     "    price = soup.select_one(\"#blog_content > div.summary_info > div.detail_summary > div.summary_left > div.lowest_area > div.lowest_top > div.row.lowest_price > span.lwst_prc > a > em\")\n",
     "    image_url = soup.select_one(\"#baseImage\")\n",
-    "    as_year = soup.select(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > span > u:-soup-contains('A/S')\")\n",
+    "    cate = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(1) > u\").get_text()\n",
     "    \n",
+    "    if cate is None or '쿨러' not in cate:\n",
+    "        ntime += 1\n",
+    "        rest_time = (time.time() - start) / ntime * (total - ntime)\n",
+    "        print(f'\\r{ntime}/{total} ({ntime/total*100:.2f}%) (남은 시간: {rest_time:.0f}s)', end='')\n",
+    "        continue\n",
+    "        \n",
     "    tbl = zip(spec_tbl_tit, spec_tbl_dsc)\n",
     "\n",
     "    info = dict()\n",
@@ -221,6 +225,8 @@
     "        text = text.replace('(제조사 웹사이트 바로가기)','')\n",
     "        info[tit.get_text()] = text.strip()\n",
     "        \n",
+    "    isocket_bit = 0\n",
+    "    asocket_bit = 0\n",
     "    feat_bit = 0\n",
     "\n",
     "    if len(cooler['name']) >= ntime:\n",
@@ -231,74 +237,38 @@
     "    cooler['company'].append(info.get('제조회사'))\n",
     "    cooler['product_seq'].append(seq)\n",
     "    cooler['image'].append(image_url['src'])\n",
-    "    cooler['chipset_company'].append(info.get('칩셋 제조사'))\n",
-    "    if 'NVIDIA 칩셋' in info.keys():\n",
-    "        chipset = info.get('NVIDIA 칩셋')\n",
-    "    elif 'AMD 칩셋' in info.keys():\n",
-    "        chipset = info.get('AMD 칩셋')\n",
-    "    elif '기타 칩셋' in info.keys():\n",
-    "        chipset = info.get('기타 칩셋')\n",
-    "    elif '인텔 칩셋' in info.keys():\n",
-    "        chipset = info.get('인텔 칩셋')\n",
-    "    cooler['chipset'].append(chipset)\n",
-    "    cooler['nm'].append(info.get('GPU 제조 공정').replace('nm', '')\n",
-    "                         if 'GPU 제조 공정' in info.keys() else None)\n",
-    "    cooler['base_clock'].append(info.get('베이스클럭').replace('MHz', '')\n",
-    "                                 if '베이스클럭' in info.keys() else None)\n",
-    "    cooler['boost_clock'].append(info.get('부스트클럭').replace('MHz', '')\n",
-    "                                  if '부스트클럭' in info.keys() else None)\n",
-    "    cooler['cuda_processor'].append(info.get('쿠다 프로세서').replace('개', '')\n",
-    "                                     if '쿠다 프로세서' in info.keys() else None)\n",
-    "    cooler['stream_processor'].append(info.get('스트림 프로세서').replace('개', '')\n",
-    "                                       if '스트림 프로세서' in info.keys() else None)\n",
-    "    cooler['interface'].append(info.get('인터페이스'))\n",
-    "    cooler['memory_type'].append(info.get('메모리 종류'))\n",
-    "    mem_cap = info.get('memory_capacity')\n",
-    "    if not (mem_cap is None or mem_cap == '해당없음' or mem_cap == '정보없음'):\n",
-    "        if mem_cap.endswith('MB'): \n",
-    "            mem_cap = str(float(mem_cap[:-2] / 1024.))\n",
-    "        if mem_cap.endswith('GB'):\n",
-    "            mem_cap = mem_cap[:-2]\n",
-    "    cooler['memory_capacity'].append(mem_cap)\n",
-    "    cooler['memory_clock'].append(info.get('메모리 클럭').replace('MHz', '')\n",
-    "                                   if '메모리 클럭' in info.keys() else None)\n",
-    "    cooler['memory_bus'].append(info.get('메모리 버스').replace('-bit', '')\n",
-    "                                 if '메모리 버스' in info.keys() else None)\n",
-    "    for i in range(len(port_bitmask)):\n",
-    "        if port_bitmask[i] in info.keys(): port_bit |= 1 << i\n",
-    "    cooler['port'].append(port_bit)\n",
-    "    cooler['monitor_support'].append(re.sub('(최대 모니터 |개)', '', info.get('모니터 지원'))\n",
-    "                                      if '모니터 지원' in info.keys() else None)\n",
-    "    for i in range(len(af_bitmask)):\n",
-    "        if af_bitmask[i] in info.keys(): af_bit |= 1 << i\n",
-    "    cooler['additional_function'].append(af_bit)\n",
-    "    cooler['usage_power'].append(re.sub('(최대 |W)', '', info.get('사용전력'))\n",
-    "                                  if '사용전력' in info.keys() else None) \n",
-    "    cooler['recommend_power'].append(re.sub('(해당없음|정격파워|W|이상| )', '', info.get('권장 파워용량'))\n",
-    "                                      if '권장 파워용량' in info.keys() else None)\n",
-    "    for i in range(len(ct_bitmask)):\n",
-    "        if ct_bitmask[i] in info.keys(): ct_bit |= 1 << i\n",
-    "    cooler['cooling_type'].append(ct_bit)\n",
-    "    cooler['pan_number'].append(re.sub('(개| |팬)', '', info.get('팬 개수').replace('무', '0'))\n",
-    "                                 if '팬 개수' in info.keys() else None)\n",
-    "    cooler['length'].append(info.get('가로(길이)').replace('mm', '')\n",
-    "                             if '가로(길이)' in info.keys() else None)\n",
-    "    cooler['thickness'].append(info.get('두께').replace('mm', '')\n",
-    "                                if '두께' in info.keys() else None)\n",
-    "    if '전원 포트' in info.keys():\n",
-    "        pin_txt = info.get('전원 포트')\n",
-    "        pin_idx = [pin_txt.find('6핀 x'), pin_txt.find('8핀 x'),\n",
-    "                   pin_txt.find('12핀 x'), pin_txt.find('16핀(12VHPWR) x')]\n",
-    "        txt_len = [4, 4, 5, 14]\n",
-    "        for i in range(len(pin_idx)):\n",
-    "            if pin_idx[i] < 0: continue\n",
-    "            pin[i] = pin_txt[pin_idx[i] + txt_len[i]]\n",
-    "    cooler['pin'].append(\"\".join(pin))\n",
+    "    cooler['category'].append(cate)\n",
+    "    cooler['cooling_type'].append(ctype_mask[info.get('냉각 방식')] if '냉각 방식' in info.keys() else None)\n",
+    "    aform = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(2) > u\").get_text()\n",
+    "    cooler['aircool_form'].append(aform_mask[aform] if aform in aform_mask.keys() else None)\n",
+    "    cooler['tdp'].append(info.get('TDP').replace('W', '') if 'TDP' in info.keys() else None)\n",
+    "    for i in range(len(isocket_bitmask)):\n",
+    "        if isocket_bitmask[i] in info.keys(): isocket_bit |= 1 << i\n",
+    "    cooler['intel_socket'].append(isocket_bit)\n",
+    "    for i in range(len(asocket_bitmask)):\n",
+    "        if asocket_bitmask[i] in info.keys(): asocket_bit |= 1 << i\n",
+    "    cooler['amd_socket'].append(asocket_bit)\n",
+    "    cooler['fan_size'].append(info.get('팬 크기').replace('mm', '') if '팬 크기' in info.keys() else None)\n",
+    "    cooler['fan_count'].append(info.get('팬 개수').replace('개', '') if '팬 개수' in info.keys() else None)\n",
+    "    cooler['airflow'].append(info.get('최대 풍량').replace(' CFM', '') if '최대 풍량' in info.keys() else None)\n",
+    "    cooler['noise'].append(info.get('최대 팬소음').replace('dBA', '') if '최대 팬소음' in info.keys() else None)\n",
+    "    cooler['width'].append(info.get('가로').replace('mm' ,'') if '가로' in info.keys() else None)\n",
+    "    cooler['length'].append(info.get('세로').replace('mm', '') if '세로' in info.keys() else None)\n",
+    "    cooler['height'].append(info.get('높이').replace('mm', '') if '높이' in info.keys() else None)\n",
+    "    cooler['radiator'].append(info.get('라디에이터').replace('열', '') if '라디에이터' in info.keys() else None)\n",
+    "    rad_len = soup.find('u', text='라디에이터 길이')\n",
+    "    rad_thick = soup.find('u', text='라디에이터 두께')\n",
+    "    hose_len = soup.find('u', text='호스 길이')\n",
+    "    cooler['radiator_length'].append(rad_len.find_parent('span').find_next_sibling().findChild('u').get_text()\n",
+    "                                     if rad_len is not None else None)\n",
+    "    cooler['radiator_thickness'].append(rad_thick.find_parent('span').find_next_sibling().findChild('u').get_text()\n",
+    "                                        if rad_thick is not None else None)\n",
+    "    cooler['hose_length'].append(hose_len.find_parent('span').find_next_sibling().findChild('u').get_text()\n",
+    "                                 if hose_len is not None else None)\n",
     "    for i in range(len(feat_bitmask)):\n",
     "        if feat_bitmask[i] in info.keys(): feat_bit |= 1 << i\n",
     "    cooler['feature'].append(feat_bit)\n",
-    "    cooler['as_years'].append(re.sub('(A/S |년)', '', as_year[0].get_text()) if as_year else None)\n",
-    "    cooler['bench_mark'].append(None)\n",
+    "    cooler['as_years'].append(info.get('A/S기간').replace('년', '') if 'A/S기간' in info.keys() else None)\n",
     "    cooler['reg_date'].append(re.sub('(년| |월)', '', info.get('등록년월')))\n",
     "    cooler['bookmark'].append(None)\n",
     "    \n",
@@ -315,8 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e7e1290a-30a2-43c3-bc72-8b3663566ad7",
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -331,7 +300,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1a80e9-ccb3-4d57-99c1-9991ca3a5e29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,7 +307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -353,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
