--- a/data/graphic_card_detail_crawling.ipynb
+++ b/data/graphic_card_detail_crawling.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9907d90e-0e0d-43fd-8478-2364fb42f2fd",
    "metadata": {
     "tags": []
    },
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "240c0ce9-78f3-4e1d-a55a-2ac7d335533f",
    "metadata": {
     "tags": []
    },
@@ -58,7 +56,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1358a0d-1a67-4ff1-bf9b-c212131d05db",
    "metadata": {
     "tags": []
    },
@@ -83,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "72d050f2-1a3d-4e37-9c42-a6ad37f6eb91",
    "metadata": {
     "tags": []
    },
@@ -121,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "85fbba3b-478d-4b80-ac25-666d6a48c3ad",
    "metadata": {
     "tags": []
    },
@@ -137,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d81bd827-2357-4b3c-bfbd-f9cb0016e633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "707ab8b6-1c62-4833-880c-a5b4807f80fb",
    "metadata": {
     "tags": []
    },
@@ -170,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "728c4092-e6ca-416e-9cb6-512bee0ce204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +174,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c21f1cbd-cfaf-4346-913e-d13d756942af",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +317,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e7e1290a-30a2-43c3-bc72-8b3663566ad7",
    "metadata": {
     "tags": []
    },
@@ -341,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd1a80e9-ccb3-4d57-99c1-9991ca3a5e29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
