--- a/data/hdd_modify.ipynb
+++ b/data/hdd_modify.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c957a89f-2aa7-4c5f-ad06-d524c2705f07",
    "metadata": {
     "tags": []
    },
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a7968bea-ebb3-4ab2-8a88-4554fa04b9c8",
    "metadata": {
     "tags": []
    },
@@ -29,7 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4501737b-1070-4f7e-8c12-e4c5c71bae70",
    "metadata": {
     "tags": []
    },
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7d0f6a12-a47e-427e-8a3f-95473e5a44b0",
    "metadata": {
     "tags": []
    },
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9320b03f-6bd8-4123-8fd3-8db84da4ec5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,7 +60,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -79,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
