--- a/data/cooler_detail_crawling.ipynb
+++ b/data/cooler_detail_crawling.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "55688ee4",
    "metadata": {
     "tags": []
    },
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "98142a0c",
    "metadata": {
     "tags": []
    },
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "d05cb690",
    "metadata": {
     "tags": []
    },
@@ -80,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ad3e5834",
    "metadata": {
     "tags": []
    },
@@ -117,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "cfb80434",
    "metadata": {
     "tags": []
    },
@@ -132,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "b2a47b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "25848609",
    "metadata": {
     "tags": []
    },
@@ -165,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6ef30643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "bc31de55",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +212,10 @@
     "    name = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > h3 > span\")\n",
     "    price = soup.select_one(\"#blog_content > div.summary_info > div.detail_summary > div.summary_left > div.lowest_area > div.lowest_top > div.row.lowest_price > span.lwst_prc > a > em\")\n",
     "    image_url = soup.select_one(\"#baseImage\")\n",
-    "    cate = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(1) > u\").get_text()\n",
+    "    cate_u = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(1) > u\")\n",
+    "    if cate_u is None:\n",
+    "        cate_u = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > span:nth-child(1) > u\")\n",
+    "    cate = cate_u.get_text()\n",
     "    \n",
     "    if cate is None or '쿨러' not in cate:\n",
     "        ntime += 1\n",
@@ -286,6 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "426c9f09",
    "metadata": {
     "tags": []
    },
@@ -300,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc35656d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -307,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
