feat: 데이터 크롤링 및 전처리

--- a/data/Danawa_crawl_cooler.ipynb
+++ b/data/Danawa_crawl_cooler.ipynb
@@ -72,9 +72,9 @@
     "chrome_options.add_argument(f'user-agent={user_agent}')\n",
     "# 불필요한 에러 메세지 없애기\n",
     "chrome_options.add_experimental_option(\"excludeSwitches\", [\"enable-logging\"])\n",
-    "# driver = webdriver.Chrome('./chromedriver/chromedriver.exe', options=chrome_options)\n",
-    "service = Service(executable_path=ChromeDriverManager().install())\n",
-    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=chrome_options)\n",
+    "# service = Service(executable_path=ChromeDriverManager().install())\n",
+    "# driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "\n",
     "save_file = True  # 파일 저장 여부\n",
     "waiting_sec = 2.5"
@@ -138,7 +138,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "b2a47b72",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ctype_mask = {'공랭': 0, '수랭': 1}\n",
@@ -191,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/4860 (0.06%) (남은 시간: 30142s)\n",
-      "걸린 시간: 18.62 sec\n"
+      "4860/4860 (100.00%) (남은 시간: 00000s) / 예상 종료 시간: 19, 17:00:43)\n",
+      "걸린 시간: 24947.34 sec\n"
      ]
     }
    ],
@@ -240,6 +242,7 @@
     "    isocket_bit = 0\n",
     "    asocket_bit = 0\n",
     "    feat_bit = 0\n",
+    "    aform = None\n",
     "\n",
     "    if len(cooler['name']) >= ntime:\n",
     "        for key in cooler.keys(): cooler[key] = cooler[key][:ntime]\n",
@@ -251,7 +254,9 @@
     "    cooler['image'].append(image_url['src'])\n",
     "    cooler['category'].append(cate)\n",
     "    cooler['cooling_type'].append(ctype_mask[info.get('냉각 방식')] if '냉각 방식' in info.keys() else None)\n",
-    "    aform = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(2) > u\").get_text()\n",
+    "    aform_u = soup.select_one(\"#blog_content > div.summary_info > div.top_summary > div > div.sub_dsc > div > dl > dd > div > div > a:nth-child(2) > u\")\n",
+    "    if aform_u is not None:\n",
+    "        aform = aform_u.get_text()\n",
     "    cooler['aircool_form'].append(aform_mask[aform] if aform in aform_mask.keys() else None)\n",
     "    cooler['tdp'].append(info.get('TDP').replace('W', '') if 'TDP' in info.keys() else None)\n",
     "    for i in range(len(isocket_bitmask)):\n",
@@ -260,17 +265,17 @@
     "    for i in range(len(asocket_bitmask)):\n",
     "        if asocket_bitmask[i] in info.keys(): asocket_bit |= 1 << i\n",
     "    cooler['amd_socket'].append(asocket_bit)\n",
-    "    cooler['fan_size'].append(info.get('팬 크기').replace('mm', '') if '팬 크기' in info.keys() else None)\n",
+    "    cooler['fan_size'].append(max(info.get('팬 크기').replace('mm', '').split(', ')) if '팬 크기' in info.keys() else None)\n",
     "    cooler['fan_count'].append(info.get('팬 개수').replace('개', '') if '팬 개수' in info.keys() else None)\n",
-    "    cooler['airflow'].append(info.get('최대 풍량').replace(' CFM', '') if '최대 풍량' in info.keys() else None)\n",
+    "    cooler['airflow'].append(max(info.get('최대 풍량').replace(' CFM', '').split(', ')) if '최대 풍량' in info.keys() else None)\n",
     "    cooler['noise'].append(info.get('최대 팬소음').replace('dBA', '') if '최대 팬소음' in info.keys() else None)\n",
     "    cooler['width'].append(info.get('가로').replace('mm' ,'') if '가로' in info.keys() else None)\n",
     "    cooler['length'].append(info.get('세로').replace('mm', '') if '세로' in info.keys() else None)\n",
     "    cooler['height'].append(info.get('높이').replace('mm', '') if '높이' in info.keys() else None)\n",
     "    cooler['radiator'].append(info.get('라디에이터').replace('열', '') if '라디에이터' in info.keys() else None)\n",
-    "    rad_len = soup.find('u', text='라디에이터 길이')\n",
-    "    rad_thick = soup.find('u', text='라디에이터 두께')\n",
-    "    hose_len = soup.find('u', text='호스 길이')\n",
+    "    rad_len = soup.find('u', string='라디에이터 길이')\n",
+    "    rad_thick = soup.find('u', string='라디에이터 두께')\n",
+    "    hose_len = soup.find('u', string='호스 길이')\n",
     "    cooler['radiator_length'].append(rad_len.find_parent('span').find_next_sibling().findChild('u').get_text()\n",
     "                                     if rad_len is not None else None)\n",
     "    cooler['radiator_thickness'].append(rad_thick.find_parent('span').find_next_sibling().findChild('u').get_text()\n",
@@ -280,14 +285,15 @@
     "    for i in range(len(feat_bitmask)):\n",
     "        if feat_bitmask[i] in info.keys(): feat_bit |= 1 << i\n",
     "    cooler['feature'].append(feat_bit)\n",
-    "    cooler['as_years'].append(info.get('A/S기간').replace('년', '') if 'A/S기간' in info.keys() else None)\n",
+    "    cooler['as_years'].append(re.sub('(년| |이상|유상|누수보상|\\+|,)', '', info.get('A/S기간'))\n",
+    "                              if ('A/S기간' in info.keys() and '개월' not in info.get('A/S기간')) else None)\n",
     "    cooler['reg_date'].append(re.sub('(년| |월)', '', info.get('등록년월')))\n",
     "    cooler['bookmark'].append(None)\n",
     "    \n",
     "    ## 테스트용\n",
     "    ntime += 1\n",
     "    rest_time = (time.time() - start) / ntime * (total - ntime)\n",
-    "    print(f'\\r{ntime}/{total} ({ntime/total*100:.2f}%) (남은 시간: {rest_time:.0f}s)', end='')\n",
+    "    print(f'\\r{ntime}/{total} ({ntime/total*100:.2f}%) (남은 시간: {rest_time:05.0f}s) / 예상 종료 시간: {time.strftime(\"%d, %H:%M:%S\", time.localtime(time.time() + rest_time))})', end='')\n",
     "    \n",
     "end = time.time()\n",
     "print(f'\\n걸린 시간: {end-start:.2f} sec')\n",
@@ -313,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc35656d",
+   "id": "eaab4e39-4654-410f-b3d7-e2e0107e1208",
    "metadata": {},
    "outputs": [],
    "source": []
