--- a/data/game_req_crawling.ipynb
+++ b/data/game_req_crawling.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1633345f",
    "metadata": {
     "tags": []
    },
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "b869bd46",
    "metadata": {
     "tags": []
    },
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "8d4b29b7",
    "metadata": {
     "tags": []
    },
@@ -79,101 +82,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           seq\n",
-      "0     18668606\n",
-      "1     20274764\n",
-      "2     19773293\n",
-      "3     13463144\n",
-      "4     20315144\n",
-      "...        ...\n",
-      "1316   7424305\n",
-      "1317   6643450\n",
-      "1318   5406903\n",
-      "1319   3928707\n",
-      "1320   1029593\n",
-      "\n",
-      "[1321 rows x 1 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# seq 파일 읽기\n",
-    "category = 112753  # 그래픽 카드\n",
-    "\n",
-    "seq_file = f'./seq_{category}.csv'\n",
-    "seq_df = pd.read_csv(seq_file)\n",
-    "print(seq_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
+   "id": "6453eb76",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "header = ['name', 'price', 'link', 'company', 'product_seq', 'image', 'chipset_company', 'chipset',\n",
-    "          'nm', 'base_clock', 'boost_clock', 'cuda_processor', 'stream_processor', 'interface',\n",
-    "          'memory_type', 'memory_capacity', 'memory_clock', 'memory_bus', 'port', 'monitor_support',\n",
-    "          'additional_function', 'usage_power', 'recommend_power', 'cooling_type', 'pan_number',\n",
-    "          'length', 'thickness', 'pin', 'feature', 'as_years', 'bench_mark', 'reg_date', 'bookmark']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "port_bitmask = ['HDMI2.1', 'HDMI2.0', 'HDMI', 'DP2.1', 'DP2.0', 'DP1.4', 'DP', 'mini DP2.1',\n",
-    "                'mini DP1.4', 'DVI(듀얼링크)', 'DVI', 'D-SUB', 'USB C-Type', '썬더볼트3',\n",
-    "                'USB 3.0', 'TV-OUT']\n",
-    "af_bitmask = ['제로팬(0-dB기술)', '멀티 VGA', '12K 지원', '8K 지원', '4K 지원', 'HDR 지원',\n",
-    "              'Dual BIOS', 'HDCP 2.3', 'HDCP 지원']\n",
-    "ct_bitmask = ['방열판', '히트파이프', '베이퍼챔버', '팬쿨러', '수냉 쿨링']\n",
-    "feat_bitmask = ['백플레이트', 'DrMOS', 'LED 라이트', 'LCD 모니터링', '오버클럭 물리키',\n",
-    "                '수냉 장착 지원', 'PWM 커넥터']\n",
-    "pin_mask = ['6핀', '8핀', '12핀', '16핀']"
+    "header_req = ['name', 'cpu', 'ram', 'gpu', 'dx', 'os', 'sto', 'spec_cless']\n",
+    "header_pro = ['name', 'usage', 'image']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "29d13a0c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "graphic = dict()\n",
-    "\n",
-    "for col in header:\n",
-    "    graphic[col] = []"
+    "requirement = dict()\n",
+    "program = dict()\n",
+    "for col in header_req:\n",
+    "    requirement[col] = []\n",
+    "for col in header_pro:\n",
+    "    program[col] = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "fd3e20a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "ntime = 0\n",
-    "total = len(seq_df)\n",
     "start = time.time()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "3bbc3e32",
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +139,7 @@
    "source": [
     "# 크롤링 시작\n",
     "for seq in seq_df.seq[ntime:]:\n",
+    "    # ►\n",
     "    url = f'https://prod.danawa.com/info/?pcode={seq}&cate={category}'\n",
     "    driver.get(url)\n",
     "    driver.implicitly_wait(10)\n",
@@ -317,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "32772367",
    "metadata": {
     "tags": []
    },
@@ -331,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f77fb762",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -338,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
