--- a/data/Danawa_crawl_power.ipynb
+++ b/data/Danawa_crawl_power.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0ca4a368",
    "metadata": {
     "tags": []
    },
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0323d883",
    "metadata": {
     "tags": []
    },
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "0ae7e232",
    "metadata": {
     "tags": []
    },
@@ -80,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "183e647c",
    "metadata": {
     "tags": []
    },
@@ -117,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "e8a97eaa",
    "metadata": {
     "tags": []
    },
@@ -133,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "348794ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "662b8537",
    "metadata": {
     "tags": []
    },
@@ -160,6 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "ad9977cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "9aad3748",
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "67fec719",
    "metadata": {
     "tags": []
    },
@@ -309,6 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77f40fef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -316,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
