--- a/data/Danawa_modify_hdd.ipynb
+++ b/data/Danawa_modify_hdd.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
+   "id": "8017fc7e",
    "metadata": {
     "tags": []
    },
@@ -15,32 +16,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
+   "id": "7ccc2430",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "a = pd.read_csv('hdd230918.csv')"
+    "a = pd.read_csv('hdd230918_2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
+   "id": "8604df36",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "col = 'rpm'\n",
     "for i in range(len(a)):\n",
-    "    if pd.isnull(a['transfer_rate'][i]): continue\n",
-    "    if '최대 ' in a['transfer_rate'][i]:\n",
-    "        a.loc[i, 'transfer_rate'] = a.loc[i, 'transfer_rate'].replace('최대 ', '')"
+    "    if pd.isnull(a[col][i]): continue\n",
+    "    if ' 가변' in a[col][i]:\n",
+    "        a.loc[i, col] = a.loc[i, col].replace(' 가변', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
+   "id": "8b3854c3-0a3b-4fd6-87d2-b4826a813044",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "col = 'transfer_rate'\n",
+    "for i in range(len(a)):\n",
+    "    if pd.isnull(a[col][i]): continue\n",
+    "    if '최대 ' in a[col][i]:\n",
+    "        a.loc[i, col] = a.loc[i, col].replace('최대 ', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "16f43b12",
    "metadata": {
     "tags": []
    },
@@ -53,6 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c16d9521",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -60,7 +82,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
