feat: 게임 사양 크롤링, 데이터 전처리

--- a/data/Danawa_modify_power.ipynb
+++ b/data/Danawa_modify_power.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "cc36c48e-3a05-4846-85a4-0b63f9e32298",
    "metadata": {
     "tags": []
@@ -299,7 +299,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
+   "id": "d15fa9ce-4e60-4db1-b1fe-b6e4de9b3eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['24핀(20+4)', '24핀', '24핀(20+4) 1개', nan, '24핀 x1', '24핀(20+4) x1',\n",
+       "       '24핀 1개'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col = 'main_power'\n",
+    "power[col].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f95d008d-336d-4043-9693-7db65e34593f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(power[col])):\n",
+    "    if pd.isnull(power[col][i]): continue\n",
+    "    power.loc[i, col] = re.sub('( 1개| x1)', '', power.loc[i, col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "449feba7-c1aa-4f47-9436-e5da71a9166b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['24핀(20+4)', '24핀', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power[col].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6671890c-2cc8-45cf-915d-38396c3958a8",
    "metadata": {
     "tags": []
@@ -318,7 +374,7 @@
    "outputs": [],
    "source": [
     "today = time.strftime('%y%m%d')\n",
-    "pd.DataFrame(power).to_csv(f'power{today}.csv', index=None)"
+    "pd.DataFrame(power).to_csv(f'part_power{today}.csv', index=None)"
    ]
   },
   {
@@ -346,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
