--- a/data/Game_crawl_requirements.ipynb
+++ b/data/Game_crawl_requirements.ipynb
@@ -72,9 +72,9 @@
     "chrome_options.add_argument(f'user-agent={user_agent}')\n",
     "# 불필요한 에러 메세지 없애기\n",
     "chrome_options.add_experimental_option(\"excludeSwitches\", [\"enable-logging\"])\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=chrome_options)\n",
-    "# service = Service(executable_path=ChromeDriverManager().install())\n",
-    "# driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "# driver = webdriver.Chrome(ChromeDriverManager().install(), options=chrome_options)\n",
+    "service = Service(executable_path=ChromeDriverManager().install())\n",
+    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "\n",
     "save_file = True  # 파일 저장 여부\n",
     "waiting_sec = 2.5"
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3bbc3e32",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4800/7713 (62.23%) (남은 시간: 00243s) / 예상 종료 시간: 20, 17:51:44)"
+      "7713/7713 (100.00%) (남은 시간: 00000s) / 예상 종료 시간: 20, 22:08:31)\n",
+      "걸린 시간: 586.07 sec\n"
      ]
     }
    ],
@@ -246,7 +247,7 @@
     "        today = time.strftime('%y%m%d')\n",
     "        pd.DataFrame(requirement).to_csv(f'gamerequirements{today}.csv', index=None)\n",
     "        pd.DataFrame(program).to_csv(f'gameprograms{today}.csv', index=None)\n",
-    "    rest_time = (time.time() - start) / nstart * (total - nstart)\n",
+    "    rest_time = (time.time() - start) / (ntime - nstart) * (total - ntime)\n",
     "    print(f'\\r{ntime}/{total} ({ntime/total*100:.2f}%) (남은 시간: {rest_time:05.0f}s) / 예상 종료 시간: {time.strftime(\"%d, %H:%M:%S\", time.localtime(time.time() + rest_time))})', end='')\n",
     "    driver.implicitly_wait(10)\n",
     "    \n",
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "32772367",
    "metadata": {
     "tags": []
@@ -274,10 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "656758d5-fd3f-4700-b10a-5c3d45444dec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "key_not_in"
    ]
@@ -307,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
