--- a/data/Danawa_modify_cooler.ipynb
+++ b/data/Danawa_modify_cooler.ipynb
@@ -682,7 +682,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
+   "id": "16bfd619-dbc5-474f-b17e-66e85f415b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['157', '150', '154', '154.9', nan, '156', '158', '155', '160',\n",
+       "       '164', '162', '165.6', '148', '135', '131', '165', '50', '37',\n",
+       "       '134', '47', '130', '99.8', '45', '75', '153', '52', '63', '136',\n",
+       "       '53', '36', '67', '163', '110', '162.8', '27', '59', '159.96',\n",
+       "       '118', '156.4', '127', '125', '45.3', '71', '66.25', '154.5', '82',\n",
+       "       '159.4', '159', '135.5', '62.7', '42.9', '122.5', '136.5', '65.15',\n",
+       "       '65', '165.2', '58', '116.2', '48', '168.3', '161.63', '161', '73',\n",
+       "       '131.5', '170', '152', '153.5', '26', '138', '161.48', '88', '145',\n",
+       "       '71.2', '117', '166.5', '55', '60', '172', '112', '146', '157.4',\n",
+       "       '171', '168.7', '163.8', '126', '142', '157.5', '171.2', '137',\n",
+       "       '70', '69', '56', '85', '120', '68', '66', '57', '122', '159.5',\n",
+       "       '52.26', '28', '42', '80', '27.4', '20', '65.1', '28.5', '30',\n",
+       "       '39', '34', '26.5', '76', '158.7', '높이 110', '67.7', '16', '77',\n",
+       "       '140', '64.5', '78.5', '46', '116'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col = 'height'\n",
+    "cooler[col].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8031ecd8-987e-43f8-9ad8-cf9c9a50b776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(cooler)):\n",
+    "    if pd.isnull(cooler[col][i]): continue\n",
+    "    if cooler.loc[i, col] == '높이 110':\n",
+    "        cooler.loc[i, col] = '110'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ad4395b0-791e-43b3-a645-7b7cddc6fd32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['157', '150', '154', '154.9', nan, '156', '158', '155', '160',\n",
+       "       '164', '162', '165.6', '148', '135', '131', '165', '50', '37',\n",
+       "       '134', '47', '130', '99.8', '45', '75', '153', '52', '63', '136',\n",
+       "       '53', '36', '67', '163', '110', '162.8', '27', '59', '159.96',\n",
+       "       '118', '156.4', '127', '125', '45.3', '71', '66.25', '154.5', '82',\n",
+       "       '159.4', '159', '135.5', '62.7', '42.9', '122.5', '136.5', '65.15',\n",
+       "       '65', '165.2', '58', '116.2', '48', '168.3', '161.63', '161', '73',\n",
+       "       '131.5', '170', '152', '153.5', '26', '138', '161.48', '88', '145',\n",
+       "       '71.2', '117', '166.5', '55', '60', '172', '112', '146', '157.4',\n",
+       "       '171', '168.7', '163.8', '126', '142', '157.5', '171.2', '137',\n",
+       "       '70', '69', '56', '85', '120', '68', '66', '57', '122', '159.5',\n",
+       "       '52.26', '28', '42', '80', '27.4', '20', '65.1', '28.5', '30',\n",
+       "       '39', '34', '26.5', '76', '158.7', '67.7', '16', '77', '140',\n",
+       "       '64.5', '78.5', '46', '116'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cooler[col].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6671890c-2cc8-45cf-915d-38396c3958a8",
    "metadata": {
     "tags": []
@@ -690,7 +772,7 @@
    "outputs": [],
    "source": [
     "today = time.strftime('%y%m%d')\n",
-    "pd.DataFrame(cooler).to_csv(f'cooler{today}.csv', index=None)"
+    "pd.DataFrame(cooler).to_csv(f'part_cooler{today}.csv', index=None)"
    ]
   },
   {
@@ -718,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
