feat: 게임 사양 전처리 진헹중

--- a/data/crawling/Benchmark_insert_cpu.ipynb
+++ b/data/crawling/Benchmark_insert_cpu.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -49,7 +49,7 @@
        "Name: name, Length: 425, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -82,7 +82,7 @@
        "Name: name, Length: 205, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -101,30 +101,27 @@
     {
      "data": {
       "text/plain": [
-       "2524    ARM Phytium,D2000/8 E8C 8 Core 2300 MHz\n",
-       "3001            Intel Core2 Duo E8290 @ 2.83GHz\n",
-       "3022            Intel Core2 Duo E8600 @ 3.33GHz\n",
-       "3117            Intel Core2 Duo E8500 @ 3.16GHz\n",
-       "3171            Intel Core2 Duo E8400 @ 3.00GHz\n",
-       "3244            Intel Core2 Duo E8135 @ 2.66GHz\n",
-       "3250            Intel Core2 Duo E8200 @ 2.66GHz\n",
-       "3281            Intel Core2 Duo E8335 @ 2.93GHz\n",
-       "3300            Intel Core2 Duo E8335 @ 2.66GHz\n",
-       "3301            Intel Core2 Duo E8435 @ 3.06GHz\n",
-       "3352              Intel Atom x5-E8000 @ 1.04GHz\n",
-       "3367            Intel Core2 Duo E8300 @ 2.83GHz\n",
-       "3369            Intel Core2 Duo E8235 @ 2.80GHz\n",
-       "3389            Intel Core2 Duo E8135 @ 2.40GHz\n",
-       "Name: name, dtype: object"
+       "41       Intel Xeon Platinum 8380 @ 2.30GHz\n",
+       "50              Intel Xeon W-3375 @ 2.50GHz\n",
+       "51              Intel Xeon W-3365 @ 2.70GHz\n",
+       "60      Intel Xeon Platinum 8375C @ 2.90GHz\n",
+       "66       Intel Xeon Platinum 8358 @ 2.60GHz\n",
+       "                       ...                 \n",
+       "4404                  Intel Celeron 1.70GHz\n",
+       "4407                  Intel Celeron 1.80GHz\n",
+       "4410                Intel Pentium 4 1.70GHz\n",
+       "4411                Intel Pentium 4 1.50GHz\n",
+       "4412                Intel Pentium 4 1.60GHz\n",
+       "Name: name, Length: 2217, dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cpu_bench.loc[cpu_bench['name'].str.contains('E8'), 'name']"
+    "cpu_bench.loc[cpu_bench['name'].str.contains('GHz'), 'name']"
    ]
   },
   {
@@ -166,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -178,13 +175,13 @@
     "          '스케일러블': ' ', '실버': 'Silver ', '애슬론': 'Athlon', '듀오': ' Duo', '쿼드 ': ' Quad ',\n",
     "          '플래티넘': 'Platinum ', '\\+ ': ' ', 'V6': ' v6 ', 'V5': ' v5 ', 'V2': ' v2 ', 'V4': ' v4 ',\n",
     "                'V3': ' v3 '}\n",
-    "bench_regex_map = {'@': ' ', '\\+': ''}\n",
+    "bench_regex_map = {'@': ' ', '\\+': '', 'GHz': ''}\n",
     "none_regex_map = {r' +': ' '}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -196,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -228,7 +225,7 @@
        "Name: name, Length: 425, dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -253,7 +250,7 @@
        "3                      [Intel, Xeon, w9, 3495X]\n",
        "4       [AMD, Ryzen, Threadripper, PRO, 5995WX]\n",
        "                         ...                   \n",
-       "4412               [Intel, Pentium, 4, 1.60GHz]\n",
+       "4412                  [Intel, Pentium, 4, 1.60]\n",
        "4413               [Intel, Pentium, 4, 1400MHz]\n",
        "4414               [Intel, Pentium, 4, 1500MHz]\n",
        "4415                       [VIA, Eden, 1000MHz]\n",
@@ -261,7 +258,7 @@
        "Name: name, Length: 4417, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
@@ -286,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -319,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -330,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -342,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -354,7 +351,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
